# aids_runtime_manager

./: CMakeLists.txt  README.md  aids_runtime_manager.pro  find_closest_waypoint.cpp  find_closest_waypoint.h  find_closest_waypoint.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.xml  rotate_image.cpp  rotate_image.h  rotate_image.ui  scenario_check.cpp  scenario_check.h  scenario_check.ui
include/runtime_manager/: find_closest_waypoint.h  mainwindow.h  rotate_image.h  scenario_check.h
src/: find_closest_waypoint.cpp  mainwindow.ui  rotate_image.ui  scenario_check.cpp
